Make sure to install and initialize terraform when running make plan

--- a/infra/k8s-clusters/Makefile
+++ b/infra/k8s-clusters/Makefile
@@ -30,12 +30,12 @@ $(TERRAFORM):
 install: $(TERRAFORM)
 
 .PHONY: init
-init:
+init: install
 	cd environments/$(ENVIRONMENT) && \
 		terraform init
 
 .PHONY: plan
-plan:
+plan: init
 	cd environments/$(ENVIRONMENT) && \
 		terraform plan
 
