Added a quick start in the README and updated Makefile help

--- a/infra/k8s-clusters/Makefile
+++ b/infra/k8s-clusters/Makefile
@@ -1,13 +1,27 @@
 .PHONY: help
 help:
-	echo "Usage:"
-	echo ""
-	echo "$$ make install"
-	echo "$$ make init"
-	echo "$$ make plan"
-	echo "$$ make deploy"
-	echo "$$ make destroy"
-	echo "$$ make clean"
+	@echo "Deployment Makefile"
+	@echo "=================="
+	@echo ""
+	@echo "Variables:"
+	@echo ""
+	@echo "* ENVIRONMENT: dev, qa, staging, prod. (Default: dev)"
+	@echo ""
+	@echo ""
+	@echo "Available targets:"
+	@echo "------------------"
+	@echo "* install  :		downloads terraform binary and add to PATH"
+	@echo "* init     :		Runs terraform init within the specified ENVIRONMENT"
+	@echo "* plan     :		Runs terraform plan within the specified ENVIRONMENT"
+	@echo "* deploy   :		Runs terraform apply within the specified ENVIRONMENT. Deploys resources to AWS EKS"
+	@echo "* destroy  :		Runs terraform destroy within the specified ENVIRONMENT. Deletes all resources in AWS"
+	@echo "* clean    :		Removes terraform installation"
+	@echo ""
+	@echo ""
+	@echo "Sample usage:"
+	@echo "-----------------"
+	@echo "make init ENVIRONMENT=qa"
+	@echo ""
 
 SHELL := /bin/bash
 
